--- a/lib/garena_web/templates/layout/_navigation.html.eex
+++ b/lib/garena_web/templates/layout/_navigation.html.eex
@@ -11,15 +11,25 @@
     <div class="text-sm lg:flex-grow">
     </div>
     <div>
-      <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
-        Arenas
-      </a>
-      <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
-        Generate Arena
-      </a>
-      <a href="/auth/google?scope=email%20profile" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
-        Sign in with Google
-      </a>
+      <%= if @conn.assigns[:user] do %>
+        <span class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
+          Welcome, <%= @conn.assigns.user.first_name %>!
+        </span>
+        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
+          Arenas
+        </a>
+        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
+          Generate Arena
+        </a>
+        <%= link "Sign out", to: Routes.session_path(@conn, :delete), class: "block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline" %>
+      <% else %>
+        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
+          Arenas
+        </a>
+        <a href="/auth/google?scope=email%20profile" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
+          Sign in with Google
+        </a>
+<% end %>
     </div>
   </div>
   <script>
