--- a/lib/garena_web/templates/layout/_navigation.html.eex
+++ b/lib/garena_web/templates/layout/_navigation.html.eex
@@ -15,17 +15,13 @@
         <span class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
           Welcome, <%= @conn.assigns.user.first_name %>!
         </span>
-        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
-          Arenas
-        </a>
-        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
-          Generate Arena
-        </a>
+
+        <%= link "Arenas", to: Routes.arena_path(@conn, :index), class: "block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline" %>
+        <%= link "Generate Arena", to: Routes.arena_path(@conn, :new), class: "block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline" %>
+
         <%= link "Sign out", to: Routes.session_path(@conn, :delete), class: "block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline" %>
       <% else %>
-        <a href="#" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
-          Arenas
-        </a>
+         <%= link "Arenas", to: Routes.arena_path(@conn, :index), class: "block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline" %>
         <a href="/auth/google?scope=email%20profile" class="block mt-4 lg:inline-block lg:mt-0 text-grey-darkest mr-4 no-underline hover:underline">
           Sign in with Google
         </a>
