--- a/lib/garena_web/templates/arena/show.html.eex
+++ b/lib/garena_web/templates/arena/show.html.eex
@@ -4,12 +4,7 @@
 
   <li>
     <strong>Arena:</strong>
-    <%= @arena.arena_id %>
-  </li>
-
-  <li>
-    <strong>Arena:</strong>
-    <%= @arena.arena %>
+    <%= text_to_html(@arena.arena) %>
   </li>
 
   <li>
