--- a/lib/garena_web/templates/layout/_navigation.html.eex
+++ b/lib/garena_web/templates/layout/_navigation.html.eex
@@ -1,6 +1,6 @@
 <nav class="flex items-center justify-between flex-wrap bg-grey-lighter p-3 font-sans">
   <div class="flex items-center flex-no-shrink text-grey-darkest mr-6">
-    <span class="font-semibold text-xl tracking-tight">Garena</span>
+    <span class="font-semibold text-xl tracking-tight"><%= link "Garena", to: Routes.page_path(@conn, :index), class: "no-underline text-grey-darkest" %></span>
   </div>
   <div class="block lg:hidden">
     <button class="flex items-center px-3 py-2 border rounded text-grey-darkest border-grey-darkest" onclick="navbarAccordian()">
