--- a/lib/garena_web/templates/page/index.html.eex
+++ b/lib/garena_web/templates/page/index.html.eex
@@ -1,5 +1,5 @@
 <div class="min-h-full min-w-full w-full h-auto fixed bg-cover" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.2)), url(<%= Routes.static_path(@conn, "/images/dice_bg.jpg") %>)">
   <div class="text-center text-white pb-16">
-    <h1 class="font-sans font-bold text-center mt-32 text-grey-white text-5xl" style="text-shadow: 1px 1px 2px #0a0a0a">Welcome to Garena!</h1>
+    <h1 class="font-sans font-bold text-center mt-32 text-grey-white text-5xl" style="text-shadow: 1px 1px 2px #0a0a0a">Welcome to Infinite Coast!</h1>
   </div>
 </div>
