--- a/lib/garena_web/templates/arena/index.html.eex
+++ b/lib/garena_web/templates/arena/index.html.eex
@@ -1,35 +1,22 @@
-<h1>Listing Arenas</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Arena</th>
-      <th>Width</th>
-      <th>Height</th>
-      <th>Level</th>
-      <th>Players</th>
-      <th>Rocks</th>
-
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-<%= for arena <- @arenas do %>
-    <tr>
-      <td><%= text_to_html(arena.arena) %></td>
-      <td><%= arena.width%></td>
-      <td><%= arena.height%></td>
-      <td><%= arena.level %></td>
-      <td><%= arena.players %></td>
-      <td><%= arena.rocks %></td>
-
-      <td>
-        <%= link "Show", to: Routes.arena_path(@conn, :show, arena) %>
-        <%= link "Delete", to: Routes.arena_path(@conn, :delete, arena), method: :delete, data: [confirm: "Are you sure?"] %>
-      </td>
-    </tr>
-<% end %>
-  </tbody>
-</table>
-
-<span><%= link "New Arena", to: Routes.arena_path(@conn, :new) %></span>
+<div class="flex justify-center mt-10 xs:mx-4 sm:mx-0">
+  <div class="bg-grey-lighter shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
+    <div class="-mx-3 md:flex mb-6">
+      <div class="md:w-full px-3 text-grey-darkest font-bold uppercase text-base">
+        Generated Arenas
+      </div>
+    </div>
+    <%= for arena <- @arenas do %>
+      <div class="-mx-3 md:flex mb-6">
+        <div class="md:w-full px-3">
+          <%= link "Arena " <> (arena.id |> Integer.to_string), to: Routes.arena_path(@conn, :show, arena), class: "no-underline hover:underline text-grey-darkest font-bold text-lg" %><br>
+          Size: <%= arena.width %>x<%= arena.height %>
+        </div>
+      </div>
+      <div class="-mx-3 flex mb-6">
+        <div class="md:w-full px-3 mb-6 md:mb-0 border-b-4 pb-4 flex justify-center">
+          <%= link text_to_html(arena.arena), to: Routes.arena_path(@conn, :show, arena), class: "no-underline text-grey-darkest font-bold text-lg font-mono" %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
